--- a/src/components/ReviewMovie/DetailReviewFilm.scss
+++ b/src/components/ReviewMovie/DetailReviewFilm.scss
@@ -1,3 +1,5 @@
+@keyframes show-content {}
+
 .con-de {
     max-width: 1400px;
 
@@ -7,9 +9,66 @@
         .col-de-left {
             padding-right: 50px;
 
-            .row-de-1 {}
+            .row-de-1 {
+                p {
+                    font-size  : 20px;
+                    font-weight: 700;
+                }
+
+            }
+
+            hr {
+                margin-left: -10px;
+                margin-top : -15px;
+                width      : 100%;
+            }
+
+            .row-de-fc {
+                list-style-type: none;
+                margin-left    : -40px;
+
+                .fb-like {
+                    span {
+                        margin-right: 40px;
+                        margin-top  : 5px;
+
+                        iframe {
+                            width: 160px !important;
+
+                        }
+                    }
+                }
+
+                li {
+                    margin     : 0px 20px 0px 30px;
+                    line-height: 35px;
+                }
+
+                .rating-movie.rating-home {
+                    background-size: 20px;
+                    height         : 25px;
+                    padding-left   : 24px;
+                    margin-left    : 10px;
+                }
+
+                .rating-movie {
+                    font-size          : 15px;
+                    height             : 40px;
+                    background         : url(../../assets/ic_star_yellow.png) no-repeat;
+                    background-size    : 25px;
+                    padding-left       : 30px;
+                    background-position: left center;
+                    display            : table-cell;
+                    vertical-align     : middle;
+                }
+
+                .btn-review {
+                    text-transform: uppercase;
+                }
+            }
 
             .row-content-de {
+                margin-top: 20px;
                 text-align: justify;
 
             }
@@ -18,6 +77,7 @@
                 text-align: justify;
                 overflow  : hidden;
                 max-height: 0;
+                margin-top: 20px;
             }
 
             .active-readmore {
@@ -26,17 +86,90 @@
 
             .btn-readmore-de {
                 justify-content: center;
+
+                button {
+                    width        : 100px;
+                    height       : 40px;
+                    border       : none;
+                    border-radius: 5px;
+
+                    &:hover {
+                        background-color: #fcaf17;
+                        color           : #ffffff;
+                    }
+                }
             }
 
             .comment-film {
+                margin-top: 30px;
+
+                .title-cmt {
+                    h5 {
+                        position      : relative;
+                        text-transform: uppercase;
+                        font-size     : 13pt;
+                        color         : #000000;
+                        font-weight   : bold;
+                    }
+
+                    &:after {
+                        content   : "";
+                        position  : absolute;
+                        display   : block;
+                        left      : 13px;
+                        width     : 10%;
+                        height    : 3px;
+                        background: #fcaf17;
+                    }
+                }
+
                 .form-cmt {
+                    padding-top: 20px;
+
                     .area-51 {
                         width        : 100%;
                         height       : 100px;
                         border-radius: 10px;
                     }
                 }
+
+                .rating-cmt {
+                    margin-left: 0px;
+                }
+
+                .btn-send {
+                    display        : flex;
+                    justify-content: flex-end;
+
+                    button {
+                        width        : 80px;
+                        height       : 40px;
+                        border       : none;
+                        border-radius: 5px;
+
+                        &:hover {
+                            background-color: #fcaf17;
+                            color           : #ffffff;
+                        }
+                    }
+                }
             }
+        }
+
+        .show-comment {
+            margin-top   : 40px;
+            margin-bottom: 20px;
+
+            .user-name {
+                text-transform: capitalize;
+                font-weight   : bold;
+                margin-bottom : 10px;
+            }
+
+            .number-rate {
+                margin-bottom: 10px;
+            }
+
         }
     }
 }
