--- a/src/components/HomePage/Home.scss
+++ b/src/components/HomePage/Home.scss
@@ -399,18 +399,23 @@
                         .image {
                             display: block;
                             width: 220px;
-                            height: auto;
+                            height: 146px;
                         }
                     }
 
                     .summary {
-                        font-size: 12px;
-                        margin-top: 10px;
-                        text-overflow: ellipsis;
+                        color: #a0a3a7;
+                        display: block;
+                        display: -webkit-box;
+                        max-width: 100%;
+                        -webkit-line-clamp: 2;
+                        -moz-line-clamp: 2;
+                        -webkit-box-orient: vertical;
                         overflow: hidden;
-                        width: 160px;
-                        height: 1.2em;
-                        white-space: nowrap;
+                        text-overflow: ellipsis;
+                        font-size: 12px;
+                        text-align: justify;
+                        max-height: 42px;
                     }
 
                     h5 {
@@ -458,18 +463,19 @@
                         background-size: 20px;
                         height: 25px;
                         padding-left: 24px;
-                        margin-left: 10px;
+                        // margin-left: 10px;
                     }
 
                     .rating-movie {
-                        font-size: 11px;
+                        // font-size: 11px;
+                        // height: 40px;
+                        // background: url(../../assets/ic_star_yellow.png) no-repeat left /14px 14px !important;
+                        // padding-left: 30px;
+                        // display: table-cell;
+                        // vertical-align: middle;
+                        font-size: 10px;
                         height: 40px;
-                        background: url(../../assets/ic_star_yellow.png) no-repeat;
-                        background-size: 21px;
-                        padding-left: 30px;
-                        background-position: left center;
-                        display: table-cell;
-                        vertical-align: middle;
+                        background: url(../../assets/ic_star_yellow.png) no-repeat left top/14px 14px !important;
                     }
 
                     .btn-review {
@@ -523,18 +529,23 @@
                         .image {
                             display: block;
                             width: 220px;
-                            height: auto;
+                            height: 146px;
                         }
                     }
 
                     .summary {
-                        font-size: 12px;
-                        margin-top: 10px;
-                        text-overflow: ellipsis;
+                        color: #a0a3a7;
+                        display: block;
+                        display: -webkit-box;
+                        max-width: 100%;
+                        -webkit-line-clamp: 2;
+                        -moz-line-clamp: 2;
+                        -webkit-box-orient: vertical;
                         overflow: hidden;
-                        width: 160px;
-                        height: 1.2em;
-                        white-space: nowrap;
+                        text-overflow: ellipsis;
+                        font-size: 12px;
+                        text-align: justify;
+                        max-height: 42px;
                     }
 
                     h5 {
@@ -582,18 +593,19 @@
                         background-size: 20px;
                         height: 25px;
                         padding-left: 24px;
-                        margin-left: 10px;
+                        // margin-left: 10px;
                     }
 
                     .rating-movie {
-                        font-size: 11px;
+                        // font-size: 11px;
+                        // height: 40px;
+                        // background: url(../../assets/ic_star_yellow.png) no-repeat left /14px 14px !important;
+                        // padding-left: 30px;
+                        // display: table-cell;
+                        // vertical-align: middle;
+                        font-size: 10px;
                         height: 40px;
-                        background: url(../../assets/ic_star_yellow.png) no-repeat;
-                        background-size: 21px;
-                        padding-left: 30px;
-                        background-position: left center;
-                        display: table-cell;
-                        vertical-align: middle;
+                        background: url(../../assets/ic_star_yellow.png) no-repeat left top/14px 14px !important;
                     }
 
                     .btn-review {
@@ -1014,18 +1026,30 @@
                     .image {
                         display: block;
                         width: 220px;
-                        height: auto;
+                        height: 146px;
                     }
                 }
 
                 .summary {
-                    font-size: 12px;
-                    margin-top: 10px;
-                    text-overflow: ellipsis;
+                    // font-size: 12px;
+                    // margin-top: 10px;
+                    // text-overflow: ellipsis;
+                    // overflow: hidden;
+                    // width: 160px;
+                    // height: 1.2em;
+                    // white-space: nowrap;
+                    color: #a0a3a7;
+                    display: block;
+                    display: -webkit-box;
+                    max-width: 100%;
+                    -webkit-line-clamp: 2;
+                    -moz-line-clamp: 2;
+                    -webkit-box-orient: vertical;
                     overflow: hidden;
-                    width: 160px;
-                    height: 1.2em;
-                    white-space: nowrap;
+                    text-overflow: ellipsis;
+                    font-size: 12px;
+                    text-align: justify;
+                    max-height: 42px;
                 }
 
                 h5 {
@@ -1073,18 +1097,19 @@
                     background-size: 20px;
                     height: 25px;
                     padding-left: 24px;
-                    margin-left: 10px;
+                    // margin-left: 10px;
                 }
 
                 .rating-movie {
-                    font-size: 11px;
+                    // font-size: 11px;
+                    // height: 40px;
+                    // background: url(../../assets/ic_star_yellow.png) no-repeat left /14px 14px !important;
+                    // padding-left: 30px;
+                    // display: table-cell;
+                    // vertical-align: middle;
+                    font-size: 10px;
                     height: 40px;
-                    background: url(../../assets/ic_star_yellow.png) no-repeat;
-                    background-size: 21px;
-                    padding-left: 30px;
-                    background-position: left center;
-                    display: table-cell;
-                    vertical-align: middle;
+                    background: url(../../assets/ic_star_yellow.png) no-repeat left top/14px 14px !important;
                 }
 
                 .btn-review {
@@ -1136,19 +1161,23 @@
                     .image {
                         display: block;
                         width: 220px;
-                        height: auto;
+                        height: 146px;
                     }
                 }
 
                 .summary {
-                    font-size: 12px;
-                    margin-top: 10px;
-
-                    text-overflow: ellipsis;
+                    color: #a0a3a7;
+                    display: block;
+                    display: -webkit-box;
+                    max-width: 100%;
+                    -webkit-line-clamp: 2;
+                    -moz-line-clamp: 2;
+                    -webkit-box-orient: vertical;
                     overflow: hidden;
-                    width: 160px;
-                    height: 1.2em;
-                    white-space: nowrap;
+                    text-overflow: ellipsis;
+                    font-size: 12px;
+                    text-align: justify;
+                    max-height: 42px;
                 }
 
                 h5 {
@@ -1196,18 +1225,19 @@
                     background-size: 20px;
                     height: 25px;
                     padding-left: 24px;
-                    margin-left: 10px;
+                    // margin-left: 10px;
                 }
 
                 .rating-movie {
-                    font-size: 11px;
+                    // font-size: 11px;
+                    // height: 40px;
+                    // background: url(../../assets/ic_star_yellow.png) no-repeat left /14px 14px !important;
+                    // padding-left: 30px;
+                    // display: table-cell;
+                    // vertical-align: middle;
+                    font-size: 10px;
                     height: 40px;
-                    background: url(../../assets/ic_star_yellow.png) no-repeat;
-                    background-size: 21px;
-                    padding-left: 30px;
-                    background-position: left center;
-                    display: table-cell;
-                    vertical-align: middle;
+                    background: url(../../assets/ic_star_yellow.png) no-repeat left top/14px 14px !important;
                 }
 
                 .btn-review {
