--- a/src/components/ListMovie/DanhSachPhim.scss
+++ b/src/components/ListMovie/DanhSachPhim.scss
@@ -1,5 +1,5 @@
 .list-movie-container {
-    width: 100%;
+    width : 100%;
     height: 800px;
 
     padding: 20px 100px;
@@ -8,15 +8,20 @@
 
         .playing-movie,
         .upcoming-movie {
-            padding: 10px;
-            text-transform: uppercase;
-            color: #555555;
+            padding        : 10px;
+            text-transform : uppercase;
+            color          : #555555;
             text-decoration: none;
-            opacity: 0.5;
+            opacity        : 0.5;
 
             &.active {
-                color: orange;
+                color  : orange;
                 opacity: 1;
+            }
+
+            &.disable {
+                pointer-events: none;
+                cursor        : default;
             }
 
             &:hover {
@@ -29,8 +34,8 @@
 
     .list-movie {
         margin-top: 20px;
-        height: 400px;
-        padding: 10px;
+        height    : 400px;
+        padding   : 10px;
 
         // .film {
         //     width : 100%;
@@ -59,46 +64,46 @@
         // }
 
         .col-image {
-            margin-top: 10px;
+            margin-top : 10px;
             align-items: center;
-            cursor: pointer;
+            cursor     : pointer;
 
             .image {
-                position: relative;
-                width: 100%;
+                position       : relative;
+                width          : 100%;
                 justify-content: center;
-                align-items: center;
-                display: flex;
+                align-items    : center;
+                display        : flex;
 
 
 
                 .image__img {
                     display: block;
-                    width: 100%;
-                    height: 250px;
+                    width  : 100%;
+                    height : 250px;
 
                 }
 
                 .image__overlay {
-                    position: absolute;
-                    width: 100%;
-                    height: 100%;
-                    background: rgba(0, 0, 0, 0.6);
-                    color: #ffffff;
-                    font-family: 'Quicksand', sans-serif;
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
+                    position       : absolute;
+                    width          : 100%;
+                    height         : 100%;
+                    background     : rgba(0, 0, 0, 0.6);
+                    color          : #ffffff;
+                    font-family    : 'Quicksand', sans-serif;
+                    display        : flex;
+                    flex-direction : column;
+                    align-items    : center;
                     justify-content: center;
-                    opacity: 0;
-                    transition: opacity 0.25s;
+                    opacity        : 0;
+                    transition     : opacity 0.25s;
 
                     --blur {
                         backdrop-filter: blur(5px);
                     }
 
                     >* {
-                        transform: translateY(20px);
+                        transform : translateY(20px);
                         transition: transform 0.25s;
                     }
 
@@ -111,21 +116,21 @@
 
             .text-detail {
                 margin-top: 10px;
-                font-size: 13px;
+                font-size : 13px;
 
                 .vn {
-                    color: #2e2e2e;
+                    color         : #2e2e2e;
                     text-transform: capitalize;
-                    text-overflow: ellipsis;
-                    overflow: hidden;
-                    white-space: nowrap;
-                    margin-bottom: 0;
+                    text-overflow : ellipsis;
+                    overflow      : hidden;
+                    white-space   : nowrap;
+                    margin-bottom : 0;
                 }
 
                 .eng {
 
                     text-transform: uppercase;
-                    color: #a0a3a7;
+                    color         : #a0a3a7;
 
                 }
 
@@ -146,9 +151,9 @@
 
                 a {
                     text-decoration: none;
-                    text-transform: uppercase;
-                    color: #fcaf17;
-                    font-weight: bold;
+                    text-transform : uppercase;
+                    color          : #fcaf17;
+                    font-weight    : bold;
                 }
             }
         }
